@@ -1,6 +1,9 @@
 SCIP version NEXT
 ==================
 
+data structures
+- new data structure for (circluar) queues (SCIP_QUEUE)
+
 features:
 - added new dual presolving for setppc-constraints
 - changed dualfix presolver to propagator such that dual fixing can also be applied during repropagation of the root node
@@ -13,6 +16,8 @@ interface
   the rank of a cut can be changed (default rank is 0)
 - methods SCIPlpiIs{PrimalFeasible,DualFeasible,DualUnbounded}() in the SoPlex interface (lpi_spx.cpp) now check that
   LP is not perturbed, which may happen when stopping due to iteration or time limit
+- new methods for the SCIP_QUEUE data structure in pub_misc.h, misc.c SCIPqueueCreate(), SCIPqueueFree(),
+  SCIPqueueClear(), SCIPqueueInsert(), SCIPqueueRemove(), SCIPqueueFirst(), SCIPqueueIsEmpty(), SCIPqueueNElems()
 
 
 SCIP version 3.0.1
